fix horizontal spacing at page cover title

--- a/assets/sass/components/_header_contents.scss
+++ b/assets/sass/components/_header_contents.scss
@@ -3,7 +3,7 @@
 @mixin container-header(
     $container-background: none,
     $container-height: 540px,
-    $container-padding: 0px 124px
+    $container-padding: 0 60px // 0 124px
 ) {
     // SPECIFIC VARIABLES(USE ONLY IN COMPONENT)
     // >>>>>>>>>>>>>>>>>>>>>>>
