--- a/assets/sass/pages/_product.scss
+++ b/assets/sass/pages/_product.scss
@@ -127,9 +127,9 @@ $product-container-padding: 0 60px 25px 60px;
     }
 
     .product-footer {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        // display: flex;
+        // justify-content: space-between;
+        // align-items: center;
         padding-top: 30px;
         padding-bottom: 30px;
     }
